Cibyl (12)
	* Fixed bug where __negdf2 was misnamed

	* Optimized the cleanup register generation more (fewer registers
	are now cleaned). This should now be almost optimal, and the code
	has actually been made a bit smaller as well

	* Improved the performance of cibyl-generate-java-wrappers by only
	reading in what's needed: The RoadMap syscall defs previously took
	almost 2.5 minutes on my computer, with the optimizations it
	finishes in less than 1 minute. Also made some smaller
	improvements to cibyl-mips2java, which should improve performance
	by about 10%

	* Extended with various new J2ME syscalls (partially from Ehud)

	* Removed the rex6000 syscalls - it's not really something useful
	for public consumption anyway

	* The test application can now write to a log file and has the
	ability to select the file system root

	* The test application has been improved and extended with many
	more tests (including performance tests)

	* Added generation of Doxygen documentation (run make clean first)

	* Bug fix in the global jump table generation: Static functions
	incorrectly called the same label if they have the same name

	* Implemented NOPH_throw which allows throwing of Java exceptions
	from C.

	* New file operations structure, which makes the standard "FILE"
	stuff much more useful and also the implementation more
	sane. Almost everything is now implemented in C which is also
	easier to maintain and has fewer Java special cases among the
	syscalls. The new structure also allows URI-style passing of
	options to fopen.

	* Implemented the --optimize-colocate-functions=FNs option, which
	colocates C functions into one Java method. This can significantly
	improve performance if you can place a hot callchain in a single
	Java method

	* Moved the stackStore optimization to function.py (from
 	javamethod.py) since it really works on functions and not methods
	and also call it from fixup()

	* Fixed a bug where the first basic block of a function was by